--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,37 +2,47 @@ apiVersion: skaffold/v4beta6
 kind: Config
 manifests:
   rawYaml:
-    - ./infra/k8s/**/*.yaml
+    # - ./infra/k8s/**/*.yaml
+    - ./infra/k8s/config/*.yaml
+    - ./infra/k8s/nginx/*.yaml
+    - ./infra/k8s/nats/*.yaml
+    # - ./infra/k8s/admin/*.yaml
+    # - ./infra/k8s/meilisearch/*.yaml
     # - ./infra/k8s/client/*.yaml
-    # - ./infra/k8s/config/*.yaml
-    # - ./infra/k8s/nginx/*.yaml
-    # - ./infra/k8s/nats/*.yaml
     # - ./infra/k8s/auth/*.yaml
-    # - ./infra/k8s/reviews/*.yaml
+    # - ./infra/k8s/users/*.yaml
+    # - ./infra/k8s/login-gateway/*.yaml
+    # - ./infra/k8s/restaurants/*.yaml
+    # - ./infra/k8s/dining-plans/*.yaml
+    # - ./infra/k8s/mail/*.yaml
+    # - ./infra/k8s/map/*.yaml
+    # - ./infra/k8s/notifications/*.yaml
+    - ./infra/k8s/reviews/*.yaml
+    # - ./infra/k8s/subscriptions/*.yaml
 metadata:
   name: dine-ease-backend
 build:
   local: 
     push: false
   artifacts:
-    - image: mujtabashafiq/dine-ease-client
-      context: ../dine-ease-frontend
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: '**/*.js'
-            dest: .
+    # - image: mujtabashafiq/dine-ease-admin
+    #   context: ../dine-ease-admin
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: '**/*.js'
+    #         dest: .
+    # - image: mujtabashafiq/dine-ease-client
+    #   context: ../dine-ease-frontend
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: '**/*.js'
+    #         dest: .
     - image: mujtabashafiq/dine-ease-auth
       context: auth
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
-    - image: mujtabashafiq/dine-ease-mail
-      context: mail
       docker:
         dockerfile: Dockerfile
       sync:
@@ -55,38 +65,46 @@ build:
         manual:
           - src: "**/*.ts"
             dest: .
-    - image: mujtabashafiq/dine-ease-notifications
-      context: notifications
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
-    - image: mujtabashafiq/dine-ease-dining-plans
-      context: dining-plans
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
-    - image: mujtabashafiq/dine-ease-map
-      context: map
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
-    - image: mujtabashafiq/dine-ease-subscriptions
-      context: subscriptions
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
+    # - image: mujtabashafiq/dine-ease-mail
+    #   context: mail
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
+    # - image: mujtabashafiq/dine-ease-notifications
+    #   context: notifications
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
+    # - image: mujtabashafiq/dine-ease-dining-plans
+    #   context: dining-plans
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
+    # - image: mujtabashafiq/dine-ease-map
+    #   context: map
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
+    # - image: mujtabashafiq/dine-ease-subscriptions
+    #   context: subscriptions
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
     - image: mujtabashafiq/dine-ease-reviews
       context: reviews
       docker:
@@ -95,11 +113,11 @@ build:
         manual:
           - src: "**/*.ts"
             dest: .
-    - image: mujtabashafiq/dine-ease-restaurants
-      context: restaurants
-      docker:
-        dockerfile: Dockerfile
-      sync:
-        manual:
-          - src: "**/*.ts"
-            dest: .
+    # - image: mujtabashafiq/dine-ease-restaurants
+    #   context: restaurants
+    #   docker:
+    #     dockerfile: Dockerfile
+    #   sync:
+    #     manual:
+    #       - src: "**/*.ts"
+    #         dest: .
