--- a/infra/k8s/nginx/ingress-srv.yaml
+++ b/infra/k8s/nginx/ingress-srv.yaml
@@ -5,12 +5,20 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/proxy-timeout: "60s"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      rewrite ^(/meilisearch)(.*) /$2 break;
 spec:
   rules:
     - host: dine-ease.dev
       http:
         paths:
+          - path: /meilisearch(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: meilisearch-srv
+                port:
+                  number: 7700
           - path: /api/auth/?(.*)
             pathType: Prefix
             backend:
@@ -25,18 +33,18 @@ spec:
                 name: login-gateway-srv
                 port:
                   number: 3000
-          - path: /api/mail/?(.*)
-            pathType: Prefix
-            backend:
-              service:
-                name: mail-srv
-                port:
-                  number: 3000
           - path: /api/user/?(.*)
             pathType: Prefix
             backend:
               service:
                 name: users-srv
+                port:
+                  number: 3000
+          - path: /api/mail/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: mail-srv
                 port:
                   number: 3000
           - path: /api/notifications
@@ -95,6 +103,13 @@ spec:
                 name: restaurants-srv
                 port:
                   number: 3000
+          - path: /admin/?(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: admin-srv
+                port:
+                  number: 8080
           - path: /?(.*)
             pathType: Prefix
             backend:
