mapSlug added in login details

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -9,15 +9,15 @@ manifests:
     # - ./infra/k8s/admin/*.yaml
     # - ./infra/k8s/meilisearch/*.yaml
     # - ./infra/k8s/client/*.yaml
-    # - ./infra/k8s/auth/*.yaml
-    # - ./infra/k8s/users/*.yaml
-    # - ./infra/k8s/login-gateway/*.yaml
+    - ./infra/k8s/auth/*.yaml
+    - ./infra/k8s/users/*.yaml
+    - ./infra/k8s/login-gateway/*.yaml
     # - ./infra/k8s/restaurants/*.yaml
     # - ./infra/k8s/dining-plans/*.yaml
     # - ./infra/k8s/mail/*.yaml
     # - ./infra/k8s/map/*.yaml
     # - ./infra/k8s/notifications/*.yaml
-    - ./infra/k8s/reviews/*.yaml
+    # - ./infra/k8s/reviews/*.yaml
     # - ./infra/k8s/subscriptions/*.yaml
 metadata:
   name: dine-ease-backend
@@ -41,30 +41,30 @@ build:
     #     manual:
     #       - src: '**/*.js'
     #         dest: .
-    # - image: mujtabashafiq/dine-ease-auth
-    #   context: auth
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-users
-    #   context: users
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
-    # - image: mujtabashafiq/dine-ease-login-gateway
-    #   context: login-gateway
-    #   docker:
-    #     dockerfile: Dockerfile
-    #   sync:
-    #     manual:
-    #       - src: "**/*.ts"
-    #         dest: .
+    - image: mujtabashafiq/dine-ease-auth
+      context: auth
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-users
+      context: users
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
+    - image: mujtabashafiq/dine-ease-login-gateway
+      context: login-gateway
+      docker:
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: "**/*.ts"
+            dest: .
     # - image: mujtabashafiq/dine-ease-mail
     #   context: mail
     #   docker:
