--- a/infra/k8s/notifications/notifications-redis-depl.yaml
+++ b/infra/k8s/notifications/notifications-redis-depl.yaml
@@ -15,6 +15,10 @@ spec:
       containers:
         - name: notifications-redis
           image: redis
+          command:
+            - redis-server
+            - "--port"
+            - "6380"  # Setting Redis to listen on port 6380
 ---
 apiVersion: v1
 kind: Service
@@ -26,5 +30,5 @@ spec:
   ports:
     - name: db
       protocol: TCP
-      port: 6379
-      targetPort: 6379
+      port: 6380
+      targetPort: 6380
