--- a/mail/package.json
+++ b/mail/package.json
@@ -31,6 +31,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "nest-winston": "^1.9.4",
     "nodemailer": "^6.9.5",
     "reflect-metadata": "^0.1.13",
