--- a/infra/k8s/nats/nats-depl.yaml
+++ b/infra/k8s/nats/nats-depl.yaml
@@ -44,6 +44,7 @@ spec:
       protocol: TCP
       port: 4222
       targetPort: 4222
+      nodePort: 31777
     - name: monitoring
       protocol: TCP
       port: 8222
