--- a/subscriptions/package.json
+++ b/subscriptions/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "mongoose": "^7.5.2",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
